Dockerfile + logger + test method + github actions
